--- a/GEARS/gears_norman_inference.ipynb
+++ b/GEARS/gears_norman_inference.ipynb
@@ -55,37 +55,23 @@
     "\n",
     "from gears import PertData, GEARS\n",
     "from gears.utils import dataverse_download\n",
-    "from zipfile import ZipFile "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Download saved model and dataloader"
+    "from zipfile import ZipFile \n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found local copy...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Download dataloader from dataverse\n",
+    "'''## Download dataloader from dataverse\n",
     "dataverse_download('https://dataverse.harvard.edu/api/access/datafile/6979957', 'norman_umi_go.tar.gz')\n",
     "\n",
     "## Extract and set up dataloader directory\n",
     "import tarfile\n",
     "with tarfile.open('norman_umi_go.tar.gz', 'r:gz') as tar:\n",
-    "    tar.extractall()"
+    "    tar.extractall()'''"
    ]
   },
   {
@@ -102,12 +88,12 @@
     }
    ],
    "source": [
-    "## Download model from dataverse\n",
+    "'''## Download model from dataverse\n",
     "dataverse_download('https://dataverse.harvard.edu/api/access/datafile/10457098', 'model.zip')\n",
     "\n",
     "## Extract and set up model directory\n",
     "with ZipFile(('model.zip'), 'r') as zip:\n",
-    "    zip.extractall(path = './')"
+    "    zip.extractall(path = './')'''"
    ]
   },
   {
@@ -119,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -128,25 +114,19 @@
      "text": [
       "Found local copy...\n",
       "Found local copy...\n",
+      "Found local copy...\n",
       "These perturbations are not in the GO graph and their perturbation can thus not be predicted\n",
       "['RHOXF2BB+ctrl' 'LYL1+IER5L' 'ctrl+IER5L' 'KIAA1804+ctrl' 'IER5L+ctrl'\n",
       " 'RHOXF2BB+ZBTB25' 'RHOXF2BB+SET']\n",
       "Local copy of pyg dataset is detected. Loading...\n",
       "Done!\n",
-      "Local copy of split is detected. Loading...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Creating new splits....\n",
+      "Saving new splits at ./data/norman/splits/norman_simulation_1_0.75.pkl\n",
+      "Simulation split test composition:\n",
+      "combo_seen0:9\n",
+      "combo_seen1:43\n",
+      "combo_seen2:19\n",
+      "unseen_single:36\n",
       "Done!\n",
       "Creating dataloaders....\n",
       "Done!\n"
@@ -154,33 +134,17 @@
     }
    ],
    "source": [
-    "data_path = './'\n",
-    "data_name = 'norman_umi_go'\n",
-    "model_name = 'gears_misc_umi_no_test'\n",
-    "\n",
-    "pert_data = PertData(data_path)\n",
-    "pert_data.load(data_path = data_path + data_name)\n",
-    "pert_data.prepare_split(split = 'no_test', seed = 1)\n",
-    "pert_data.get_dataloader(batch_size = 32, test_batch_size = 128)\n",
+    "pert_data = PertData('./data')\n",
+    "pert_data.load(data_name = 'norman')\n",
+    "pert_data.prepare_split(split = 'simulation', seed = 1)\n",
+    "pert_data.get_dataloader(batch_size = 32, test_batch_size = 32)\n",
     "\n",
     "gears_model = GEARS(pert_data, device = 'cuda:0', \n",
     "                        weight_bias_track = False, \n",
-    "                        proj_name = 'gears', \n",
-    "                        exp_name = model_name)\n",
-    "gears_model.load_pretrained('./model_ckpt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gears_model = GEARS(pert_data, device = 'cuda:0', \n",
-    "                        weight_bias_track = False, \n",
-    "                        proj_name = 'gears', \n",
-    "                        exp_name = model_name)\n",
-    "gears_model.load_pretrained('./model_ckpt')"
+    "                        proj_name = 'pertnet', \n",
+    "                        exp_name = 'pertnet')\n",
+    "#gears_model.load_pretrained('./model_ckpt')\n",
+    "gears_model.load_pretrained('test_model')"
    ]
   },
   {
@@ -192,23 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'CNN1_CBL': array([3.9031024e-03, 4.6599126e-01, 9.3744494e-02, ..., 3.5035353e+00,\n",
-       "        1.6265449e-08, 3.7898731e-01], dtype=float32)}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gears_model.predict([['CNN1', 'CBL']])"
+    "test_adata = pert_data.adata[pert_data.adata.obs['split'] == 'test']\n",
+    "unique_conds = list(set(test_adata.obs['condition'].astype(str).unique()) - set(['ctrl']))\n",
+    "pred = []\n",
+    "for condition in unique_conds:\n",
+    "    gene_list = condition.split('+')\n",
+    "    if 'ctrl' in gene_list:\n",
+    "        gene_list.remove('ctrl')\n",
+    "    gears_pred = gears_model.predict([gene_list])\n",
+    "    pred.append(gears_pred)"
    ]
   },
   {
